tests/typing/bad/testfile-lvalue-3.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() { int x; int y; (x+y) = 2; }

